runtime-macros/tests/cases/fail_non_empty_body.stderr
error: #[topo_pipeline] requires an empty body `{}` -- the IR pass replaces the function body wholesale, so any user-written statements are silently dropped at runtime
  --> tests/cases/fail_non_empty_body.rs:8:22
   |
 8 |   fn surprise() -> i32 {
   |  ______________________^
 9 | |     let v = 42;
10 | |     v + 1
11 | | }
   | |_^

error[E0425]: cannot find function `surprise` in this scope
  --> tests/cases/fail_non_empty_body.rs:14:13
   |
14 |     let _ = surprise();
   |             ^^^^^^^^ not found in this scope
